@@ -50,7 +50,7 @@ public:
   virtual void flush_pages();
 
 protected:
-  virtual void create_standard_file(xtr_base_c *master, KaxTrackEntry &track);
+  virtual void create_standard_file(xtr_base_c *master, KaxTrackEntry &track, LacingType lacing);
   virtual void header_packets_unlaced(std::vector<memory_cptr> &header_packets);
 
   virtual void queue_frame(memory_cptr &frame, int64_t granulepos);
@@ -108,6 +108,25 @@ public:
 
   virtual const char *get_container_name() {
     return "Ogg (Theora in Ogg)";
+  };
+
+protected:
+  virtual void header_packets_unlaced(std::vector<memory_cptr> &header_packets);
+};
+
+class xtr_oggopus_c: public xtr_oggbase_c {
+private:
+  timecode_c m_position;
+
+public:
+  xtr_oggopus_c(const std::string &codec_id, int64_t tid, track_spec_t &tspec);
+
+  virtual void create_file(xtr_base_c *master, KaxTrackEntry &track);
+  virtual void handle_frame(xtr_frame_t &f);
+  virtual void finish_file();
+
+  virtual const char *get_container_name() {
+    return "Ogg (Opus in Ogg)";
   };
 
 protected:
