@@ -249,3 +249,4 @@ T_400opus_experimental:ce4f0bd0c52a9d410ce34b5751416c63:passed:20130703-213929:0
 T_401opus_experimental_remux:a910a17383083f2fa75001efd175c352:passed:20130703-213932:0.06857043
 T_402opus_output_order:e7d89f40e06bd81db8fa20b2ea6218b8:passed:20130705-115856:0.252820697
 T_403opus_remux_final:da99246c61326c47a530f95948b088be:passed:20130705-135811:0.068533558
+T_404opus_extraction:58498a76a35cd151b1c75ad913887f00:passed:20130915-201931:0.050758351
