@@ -1,3 +1,8 @@
+2013-09-15  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mkvextract: new feature: Implemented extraction of Opus tracks
+        into OggOpus files.
+
 2013-09-14  Monty Montgomery  <xiphmont@gmail.com>
 
         * mkvinfo: bug fix: The track information summary enabled with
